--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "electron": "^21.1.0"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "bootstrap": "^5.2.2",
+    "electron-squirrel-startup": "^1.0.0",
+    "xml2json": "^0.12.0"
   },
   "config": {
     "forge": {
