--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bootstrap": "^5.2.2",
     "electron-squirrel-startup": "^1.0.0",
+    "libxmljs": "^0.19.10",
     "xml2json": "^0.12.0"
   },
   "config": {
