--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
     "electron-squirrel-startup": "^1.0.0",
     "sax": "^1.2.4"
   },
