--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "electron": "22.0.0",
     "eslint": "^8.29.0",
     "eslint-plugin-import": "^2.26.0",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
     "style-loader": "^3.3.1",
@@ -39,6 +40,8 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "bootstrap": "^5.2.3",
+    "electron-squirrel-startup": "^1.0.0",
+    "jquery": "^3.6.1"
   }
 }
