--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fcpxcompanion",
   "productName": "fcpxcompanion",
-  "version": "1.0.0",
-  "description": "My Electron application description",
+  "version": "0.90.0",
+  "description": "FCPX Companion",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -11,7 +11,9 @@
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
-  "keywords": [],
+  "keywords": [
+    "FCPX"
+  ],
   "author": {
     "name": "William Rey",
     "email": "wrey75@gmail.com"
@@ -27,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "autoprefixer": "^10.4.13",
     "css-loader": "^6.7.2",
     "electron": "22.0.0",
     "eslint": "^8.29.0",
@@ -35,11 +38,13 @@
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
     "node-sass": "^8.0.0",
+    "postcss-loader": "^7.0.2",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "~4.5.4"
+    "typescript": "~4.5.4",
+    "url-loader": "^4.1.1"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
