--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "productName": "fcpxcompanion",
   "version": "0.90.0",
   "description": "FCPX Companion",
-  "main": ".webpack/main",
+  "main": "src/main.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "start": "electron ."
   },
   "keywords": [
     "FCPX"
@@ -20,35 +16,10 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.4",
-    "@electron-forge/maker-deb": "^6.0.4",
-    "@electron-forge/maker-rpm": "^6.0.4",
-    "@electron-forge/maker-squirrel": "^6.0.4",
-    "@electron-forge/maker-zip": "^6.0.4",
-    "@electron-forge/plugin-webpack": "^6.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
-    "autoprefixer": "^10.4.13",
-    "css-loader": "^6.7.2",
-    "electron": "22.0.0",
-    "eslint": "^8.29.0",
-    "eslint-plugin-import": "^2.26.0",
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^7.2.13",
-    "node-loader": "^2.0.0",
-    "node-sass": "^8.0.0",
-    "postcss-loader": "^7.0.2",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "typescript": "~4.5.4",
-    "url-loader": "^4.1.1"
+    "electron": "^23.2.0"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
-    "electron-squirrel-startup": "^1.0.0",
     "jquery": "^3.6.1"
   }
 }
