--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
-    "jquery": "^3.6.1"
+    "jquery": "^3.6.1",
+    "sax": "^1.2.4"
   }
 }
