feat: more complete display

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
     "jquery": "^3.6.1",
     "sax": "^1.2.4"
   }
