--- a/.gitignore
+++ b/.gitignore
@@ -82,13 +82,15 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
-# TernJS port file
-.tern-port
-
-# Mac OS
-.DS_Store
 # Webpack
 .webpack/
 
+# Vite
+.vite/
+
 # Electron-Forge
 out/
+
+# Mac OS
+.DS_Store
+
