--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "fcpxcompanion",
   "productName": "FCPXCompanion",
-  "version": "0.50.0",
-  "description": "FCPX Companion",
-  "main": "src/main.js",
+  "version": "0.60.0",
+  "description": "An application to backup FCPX librariries",
+  "main": ".webpack/main",
   "scripts": {
-    "start": "electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "echo \"No linting configured\""
   },
   "keywords": [
     "FCPX"
@@ -16,12 +20,34 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "electron": "^23.2.0"
+    "@babel/core": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@electron-forge/cli": "^6.3.0",
+    "@electron-forge/maker-deb": "^6.3.0",
+    "@electron-forge/maker-rpm": "^6.3.0",
+    "@electron-forge/maker-squirrel": "^6.3.0",
+    "@electron-forge/maker-zip": "^6.3.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.3.0",
+    "@electron-forge/plugin-webpack": "^6.3.0",
+    "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "electron": "25.5.0",
+    "node-loader": "^2.0.0",
+    "postcss-loader": "^7.3.3",
+    "sass": "~1.64.2",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.4",
+    "electron-squirrel-startup": "^1.0.0",
     "jquery": "^3.6.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sax": "^1.2.4"
   }
 }
