--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fcpxcompanion",
   "productName": "FCPXCompanion",
-  "version": "0.81.2",
+  "version": "0.82.0",
   "description": "An application to backup FCPX librariries",
   "main": ".webpack/main",
   "scripts": {
@@ -44,8 +44,10 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.4",
+    "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "sax": "^1.2.4"
